# pyenet

./: MANIFEST.in  enet.pyx  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml  wheels.yml
