[build-system]
requires = ["setuptools>=64", "Cython>=3,<4"]
build-backend = "setuptools.build_meta"

[project]
name = "pyenet"
version = "1.3.18"
description = "A python wrapper for the ENet library"
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.9"
maintainers = [
    { name = "Andrew Resch" },
    { name = "Piqueserver team", email = "samuel@swalladge.id.au" },
]

[project.urls]
Homepage = "https://github.com/piqueserver/pyenet/"
Repository = "https://github.com/piqueserver/pyenet/"
